# RAG-In-A-Box

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  api_server.py  attachment_context_refresh.py  communication_context.py  config.local.yaml.example  config.staging.cds-realmedia.yaml  config.staging.realmedia.yaml  config.staging.yaml  config.vps.yaml.example  config.yaml.example  config_test.yaml.example  doc_enrichment.py  doc_id_store.py  docker-compose.staging.cds.yml  docker-compose.staging.yml  docker-compose.yml  extractors.py  flow_index_vault.py  index_run_supervisor.py  lancedb_store.py  llama_server.py  mcp_server.py  memory_observer.py  prefect_server.py  pyproject.toml  render.yaml  requirements.txt  run_index.py  search_hybrid.py  server.py  sor_query.py  taxonomy_store.py  verify_search.py
core/: __init__.py  artifacts.py  config.py  dedupe.py  enrichment_postprocess.py  fallback.py  index_request_queue.py  index_write_lock.py  lance_maintenance.py  resilience.py  source_types.py  storage.py  taxonomy.py  tracing.py
deploy/: README.md  install.sh
docs/: TESTING.md  architecture.md  comm-data-store-canonical-messages-2026-06-12.md  comm-lookup.md  deepseek-ocr2-service-scope.md  enrichment-benchmark-results-2026-05-01.md  hard-llm-benchmark.md  index-storage-lifecycle.md  local-deep-research-integration.md  vps-architecture.md
hooks/: __init__.py  dispatcher.py  events.py  http.py
integrations/: __init__.py
plans/: add-source-abstraction.md
providers/: __init__.py
scripts/: attachment_path_audit.py  (+17 more)
(+206 files in other folders)
