[project]
name = "obsidian-vault-semantic-index"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
markers = [
    "unit: fast, no network, no external services",
    "integration: subsystems with local resources only (tmp dirs, in-process apps)",
    "e2e: drives the staging container from outside (compose stack must be up)",
    "live: real providers, real money (API keys, Mac Mini OCR, comm-store Postgres)",
]
addopts = "--import-mode=importlib"
